# OCR-Sudoku

./: CMakeCache.txt  CMakeLists.txt  Makefile  NN.txt  OCR_GUI.glade  OCR_GUI.glade~  Ocr  README.md  clean.sh  clear.script  cmake_install.cmake  compile.script  compile.sh  ideas.txt  res.result
Neural_Network/: Makefile  NN.txt  main  main.c  nn.c
Neural_Network/src/: Makefile  functions.c  functions.h  layer.c  layer.h  main  main.c  nn.c  user_inputs_functions.c  user_inputs_functions.h
Neural_Network/usefull/: functions.c  functions.h  matrix.c  matrix.h  user_inputs_functions.c  user_inputs_functions.h
Old Neural_Network/: NN.txt
Old Neural_Network/src/: layer.c  layer.h  main  main.c  nn.h
Rotation/: .rotation.c.swp  .rotationbis.c.swp  Makefile  rotation  rotation.c
Rotation/autres/: print.c  rotation180.c  rotation2.c  rotation90.c  rotationF.c
Rotation/images/: rotation.html
backup/neural_network/: Makefile  Ocr  OldMakefile
backup/preprocessing/: Makefile
backup/solver/: Makefile  read_file.c  read_file.h  sudoku.c
cut_image/: binary_sudo  binary_sudob
data/TEST/: 1.txt  10.txt  11.txt  3.txt
data/XOR/: 0.txt  1.txt  2.txt  3.txt
homography/: Makefile  homographic.c  homography_test
image_processing/: .canny_edge_detector.c.swo  Makefile  canny_edge_detector.c  canny_edge_detector.h  main  main.c
image_processing/final/: Makefile  hough_transformation.c  main.c
image_processing/v1/: .Makefile.swp  .convolution.c.swp  .gradients.c.swp  .main.c.swp  Makefile  gaussian_blur.c  gradients.c  gradients.h  grayscale.c  grayscale.h  main  main.c  matrix.c  matrix.h  otsu.c
neural_network/: CMakeCache.txt  CMakeLists.txt  Makefile  Ocr  cmake_install.cmake  matrix.c  neural_network.c  nn  save  user_inputs_functions.c
neural_network/saves/: save_3  save_6  save_v1
preprocessing/: Makefile.c  preprocessing.c
solver/: .Makefile.swp  .read_file.c.swp  .sudoku.c.swp  Makefile  check_index.c  main.c  read_file.c  read_file.h  sudoku.c  sudoku.h  test
solver/test/: easy1  easy1.result  xtrem1.result
src/: data.h  functions.c  functions.h  gui.c  gui.h  layer.c  layer.h  main  main.c  main.d  nn.c  nn.h  test.c  user_inputs_functions.c
src/affichage/: affichage.c  affichage.h
src/functions/: test.c
src/image_processing/: Makefile  adaptative_threshold.c  adaptative_threshold.h  gaussian_blur.c  gaussian_blur.h  gradients.c  gradients.h  grayscale.c  main.c  matrix.h  otsu.c
src/neural_network/: neural_network.c  (+2 more)
(+29 files in other folders)
